<resources>
    <string name="app_name">Event Tracker</string>

    <string name="navigation_drawer_open">Otvori navigation drawer</string>
    <string name="navigation_drawer_close">Zatvori navigation drawer</string>

    <string name="action_settings">Postavke</string>
    <string name="app_mail">event.tracker.info@gmail.com</string>
    <string name="card_name">Datum:</string>
    <string name="birthday_left">slavi rođendan za:</string>
    <string name="holiday_left">dolazi za:</string>
    <string name="app_name_general">APLIKACIJA</string>
    <string name="app_version_general">Verzija</string>
    <string name="app_version">1.0.0</string>
    <string name="app_author_general">Autor</string>
    <string name="app_author">Dalibor K.</string>
    <string name="app_project_general">Projekt</string>
    <string name="app_project">Event Tracker App</string>
    <string name="time_hd">SATI</string>
    <string name="oror_hd">odnosno</string>
    <string name="days_hd">DANA</string>
    <string name="add_event">Dodaj</string>
    <string name="date_general">Datum (npr. 05/10)</string>
    <string name="name_general">Naziv</string>
    <string name="drawer_main">Početna</string>
    <string name="drawer_holidays">Blagdani</string>
    <string name="drawer_birthdays">Rođendani</string>
    <string name="drawer_other">Ostali događaji</string>
    <string name="action_about">O aplikaciji</string>
    <string name="drawer_login">Prijava</string>
    <string name="drawer_user_op">Korisničke opcije</string>
    <string name="drawer_upcoming">Uskoro</string>
    <string name="other_general">Ostalo</string>
    <string name="ms_upcoming">Uskoro</string>
    <string name="removal_question">Želite li uistinu obrisati događaj?</string>
    <string name="remove">Obriši</string>
    <string name="cancel">Odustani</string>
    <string name="delete_birthday">Obriši rođendan</string>
    <string name="delete_holiday">Obriši blagdan</string>
    <string name="other_events_left">će se dogoditi za:</string>
    <string name="delete_event">Obriši događaj</string>
    <string name="login_powered_by">Powered by Dalibor K. © 2017. All rights reserved.</string>
    <string name="login_type_pass">Upišite lozinku...</string>
    <string name="login_type_user">Upišite korisničko ime...</string>
    <string name="drawer_logout">Odjava</string>
    <string name="personal_general">Privatno</string>
    <string name="drawer_personal">Privatni događaji</string>
    <string name="app_lang_pref">Jezik aplikacijskog sučelja</string>
    <string name="app_pref_load_default_data">Koristiti samo defaultne podatke</string>
    <string name="login_good">Uspješna prijava!!!</string>
    <string name="login_bad">Pogrešno korisničko ime ili lozinka!</string>

    <string name="bad_input">Nevaljan unos!</string>
    <string name="bad_date_format">Krivi format datuma! (dd/mm)</string>
    <string name="invalid_date">Nepostojeći datum!</string>
    <string name="name_alr_exist">Naziv već postoji!</string>

    <string name="about_app_title">O aplikaciji</string>
    <string name="add_birthday_title">Dodaj rođendan</string>
    <string name="add_holiday_title">Dodaj blagdan</string>
    <string name="add_event_title">Dodaj događaj</string>
    <string name="add_personal_event_title">Dodaj privatni događaj</string>
    <string name="time_till_birthday_title">Vrijeme do rođendana</string>
    <string name="birthdays_title">Rođendani</string>
    <string name="time_till_holiday_title">Vrijeme do blagdana</string>
    <string name="holidays_title">Blagdani</string>
    <string name="events_title">Ostali događaji</string>
    <string name="time_till_event_title">Vrijeme do događaja</string>
    <string name="personal_event_title">Privatni događaji</string>
    <string name="upcoming_events_title">Uskoro</string>
    <string name="added_event">Događaj uspješno dodan!</string>

    <string name="reg_main">Registracija</string>
    <string name="reg_detail_1">Besplatno se registrirajte u aplikaciju već sada!</string>
    <string name="reg_details_2">Molimo unesite svoje podatke:</string>
    <string name="reg_button">Registriraj me</string>
    <string name="reg_name">Upišite ime...</string>
    <string name="reg_surname">Upišite prezime...</string>
    <string name="reg_email">Upišite email...</string>
    <string name="reg_username">Upišite username...</string>
    <string name="reg_password">Upišite password...</string>
    <string name="drawer_registration">Registracija</string>
    <string name="toast_good_reg">Uspješna registracija!</string>
    <string name="toast_bad_reg">Pogrešan unos!</string>
    <string name="toast_user_exists_reg">Username već postoji!</string>
    <string name="toast_error_reg">Došlo je do pogreške, pokušajte ponovo!</string>

</resources>
