<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.dk.eventtracker.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutsHolder"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topLayout"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo_pic_small"
                android:id="@+id/imageView_logo"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:elevation="24dp"
                android:paddingBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottomLayout"
            android:gravity="center">

            <EditText
                android:layout_height="65dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_username"
                android:hint="@string/login_type_user"
                tools:text="@string/login_type_user"
                android:background="@android:drawable/alert_light_frame"
                android:layout_width="275dp" />

            <EditText
                android:layout_height="65dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_password"
                android:hint="@string/login_type_pass"
                tools:text="@string/login_type_pass"
                android:textSize="18sp"
                android:background="@android:drawable/alert_light_frame"
                android:layout_width="275dp" />

            <Button
                android:text="Prijava"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                style="@android:style/Widget.Button"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:background="@android:drawable/alert_light_frame" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_credentials"
            android:textSize="12sp"
            android:textColor="#ffffffff"
            android:text="@string/login_powered_by"
            android:textAlignment="center"
            android:gravity="bottom"
            android:paddingTop="30dp" />

    </LinearLayout>
</RelativeLayout>

