<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutScroller">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutsHolder">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/topLayout"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_pe_name"
                    android:textAlignment="center"
                    tools:text="Događaj"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingTop="10dp"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_pe_date"
                    android:textAlignment="center"
                    tools:text="20.03.2017."
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp"
                    android:paddingTop="3dp" />

                <TextView
                    android:text="@string/other_events_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_pe_2"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textColor="?android:attr/textColorTertiary"
                    android:paddingTop="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/middleLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/days_hd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_days_g_pe"
                    android:textSize="15dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/thin_line"
                    android:id="@+id/thin_line_1"
                    android:layout_gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_days_pe"
                    tools:text="345 dana"
                    android:textSize="50dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"
                    android:background="@color/cardview_shadow_end_color" />

                <ImageView
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/thin_line"
                    android:id="@+id/thin_line_5"
                    android:layout_gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:text="@string/oror_hd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_pe_3"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottomLayout"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/time_hd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_hours_g_pe"
                    android:textSize="15dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/thin_line"
                    android:id="@+id/thin_line_4"
                    android:layout_gravity="center"
                    android:layout_width="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_timer_pe"
                    android:textAlignment="center"
                    android:textStyle="normal|bold"
                    tools:text="55:22:11"
                    android:textColor="@color/colorAccent"
                    android:textSize="50dp"
                    android:textAllCaps="false"
                    android:background="@color/cardview_shadow_end_color" />

                <ImageView
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/thin_line"
                    android:id="@+id/thin_line_2"
                    android:layout_gravity="center"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp">

                <Button
                    android:text="@string/delete_event"
                    android:id="@+id/button_pe_del"
                    android:elevation="0dp"
                    android:background="@color/colorAccent"
                    android:textColor="#fff"
                    android:layout_width="140dp"
                    android:fontFamily="sans-serif-medium"
                    style="@android:style/Widget.Button"
                    android:textSize="12dp"
                    android:layout_height="25dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>